Fix nav-links spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ nav {
 .nav-links {
 	display: flex;
 	justify-content: space-between;
-	width: 45%;
+	width: 40%;
 }
 
 .nav-links li {
